--- a/album.html
+++ b/album.html
@@ -316,48 +316,6 @@
                 <!-- TRACCE ALBUM -->
 
                 <section id="tracce-album">
-                  <!-- <div
-                    class="tab traccia-tab d-none d-lg-block"
-                    style="display: flex !important"
-                  > -->
-                  <!-- <div
-                      class="tab traccia-int-tab d-none d-lg-block"
-                      style="display: flex !important"
-                    >
-                      <div
-                        style="
-                          display: flex !important;
-                          align-items: center !important;
-                        "
-                      >
-                        <span class="tab num-traccia-tab d-none d-lg-block"
-                          >#</span
-                        >
-                        <div class="tab info-traccia-tab d-none d-lg-block">
-                          <span class="tab titolo-traccia-tab d-none d-lg-block"
-                            >TITOLO</span
-                          >
-                        </div>
-                      </div>
-                      <span class="tab riproduzioni-tab d-none d-lg-block"
-                        >RIPRODUZIONI</span
-                      >
-                      <i
-                        class="tab durata-traccia-tab d-none d-lg-block bi bi-clock text-primary fs-3"
-                        style="
-                          font-size: 0.9em !important;
-                          color: #ccc !important;
-                        "
-                      ></i>
-
-                      <div class="tab d-lg-none azioni-traccia-tab">
-                        <i
-                          class="tab bi bi-three-dots-vertical"
-                          style="color: #ccc"
-                        ></i>
-                      </div>
-                    </div> -->
-                  <!--  -->
                   <div
                     class="row d-none d-lg-block"
                     style="
@@ -401,203 +359,7 @@
                   <div class="separatore"></div>
                   <!--  -->
 
-                  <!-- <div class="traccia">
-                    <div class="traccia-int">
-                      <div
-                        style="
-                          display: flex !important;
-                          align-items: center !important;
-                        "
-                      >
-                        <span class="num-traccia d-none d-lg-block">1</span>
-                        <div class="info-traccia">
-                          <span class="titolo-traccia">Titolo Traccia</span>
-                          <span class="artista-traccia">Nome Artista</span>
-                        </div>
-                      </div>
-                      <span class="riproduzioni d-none d-lg-block">
-                        2342.432</span
-                      >
-                      <span class="durata-traccia d-none d-lg-block">
-                        1:26</span
-                      >
-                      <div class="d-lg-none azioni-traccia">
-                        <i
-                          class="bi bi-three-dots-vertical"
-                          style="color: #ccc"
-                        ></i>
-                      </div>
-                    </div>
-                  </div> -->
                   <div id="lista" class="container px-3"></div>
-                  <!-- <div class="traccia">
-                    <div class="traccia-int">
-                      <div
-                        style="
-                          display: flex !important;
-                          align-items: center !important;
-                        "
-                      >
-                        <span class="num-traccia d-none d-lg-block">1</span>
-                        <div class="info-traccia">
-                          <span class="titolo-traccia">Titolo Traccia</span>
-                          <span class="artista-traccia">Nome Artista</span>
-                        </div>
-                      </div>
-                      <span class="riproduzioni d-none d-lg-block">
-                        2342.432</span
-                      >
-                      <span class="durata-traccia d-none d-lg-block">
-                        1:26</span
-                      >
-                      <div class="d-lg-none azioni-traccia">
-                        <i
-                          class="bi bi-three-dots-vertical"
-                          style="color: #ccc"
-                        ></i>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="traccia">
-                    <div class="traccia-int">
-                      <div
-                        style="
-                          display: flex !important;
-                          align-items: center !important;
-                        "
-                      >
-                        <span class="num-traccia d-none d-lg-block">1</span>
-                        <div class="info-traccia">
-                          <span class="titolo-traccia">Titolo Traccia</span>
-                          <span class="artista-traccia">Nome Artista</span>
-                        </div>
-                      </div>
-                      <span class="riproduzioni d-none d-lg-block">
-                        2342.432</span
-                      >
-                      <span class="durata-traccia d-none d-lg-block">
-                        1:26</span
-                      >
-                      <div class="d-lg-none azioni-traccia">
-                        <i
-                          class="bi bi-three-dots-vertical"
-                          style="color: #ccc"
-                        ></i>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="traccia">
-                    <div class="traccia-int">
-                      <div
-                        style="
-                          display: flex !important;
-                          align-items: center !important;
-                        "
-                      >
-                        <span class="num-traccia d-none d-lg-block">1</span>
-                        <div class="info-traccia">
-                          <span class="titolo-traccia">Titolo Traccia</span>
-                          <span class="artista-traccia">Nome Artista</span>
-                        </div>
-                      </div>
-                      <span class="riproduzioni d-none d-lg-block">
-                        2342.432</span
-                      >
-                      <span class="durata-traccia d-none d-lg-block">
-                        1:26</span
-                      >
-                      <div class="d-lg-none azioni-traccia">
-                        <i
-                          class="bi bi-three-dots-vertical"
-                          style="color: #ccc"
-                        ></i>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="traccia">
-                    <div class="traccia-int">
-                      <div
-                        style="
-                          display: flex !important;
-                          align-items: center !important;
-                        "
-                      >
-                        <span class="num-traccia d-none d-lg-block">1</span>
-                        <div class="info-traccia">
-                          <span class="titolo-traccia">Titolo Traccia</span>
-                          <span class="artista-traccia">Nome Artista</span>
-                        </div>
-                      </div>
-                      <span class="riproduzioni d-none d-lg-block">
-                        2342.432</span
-                      >
-                      <span class="durata-traccia d-none d-lg-block">
-                        1:26</span
-                      >
-                      <div class="d-lg-none azioni-traccia">
-                        <i
-                          class="bi bi-three-dots-vertical"
-                          style="color: #ccc"
-                        ></i>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="traccia">
-                    <div class="traccia-int">
-                      <div
-                        style="
-                          display: flex !important;
-                          align-items: center !important;
-                        "
-                      >
-                        <span class="num-traccia d-none d-lg-block">1</span>
-                        <div class="info-traccia">
-                          <span class="titolo-traccia">Titolo Traccia</span>
-                          <span class="artista-traccia">Nome Artista</span>
-                        </div>
-                      </div>
-                      <span class="riproduzioni d-none d-lg-block">
-                        2342.432</span
-                      >
-                      <span class="durata-traccia d-none d-lg-block">
-                        1:26</span
-                      >
-                      <div class="d-lg-none azioni-traccia">
-                        <i
-                          class="bi bi-three-dots-vertical"
-                          style="color: #ccc"
-                        ></i>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="traccia">
-                    <div class="traccia-int">
-                      <div
-                        style="
-                          display: flex !important;
-                          align-items: center !important;
-                        "
-                      >
-                        <span class="num-traccia d-none d-lg-block">1</span>
-                        <div class="info-traccia">
-                          <span class="titolo-traccia">Titolo Traccia</span>
-                          <span class="artista-traccia">Nome Artista</span>
-                        </div>
-                      </div>
-                      <span class="riproduzioni d-none d-lg-block">
-                        2342.432</span
-                      >
-                      <span class="durata-traccia d-none d-lg-block">
-                        1:26</span
-                      >
-                      <div class="d-lg-none azioni-traccia">
-                        <i
-                          class="bi bi-three-dots-vertical"
-                          style="color: #ccc"
-                        ></i>
-                      </div>
-                    </div>
-                  </div> -->
                 </section>
               </div>
             </div>
@@ -642,6 +404,11 @@
         </div>
 
         <!--  controlli + barra di progresso della canzone -->
+        <!-- Player audio nascosto -->
+        <audio
+          id="audioPlayer"
+          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
+        ></audio>
         <div
           class="d-flex flex-column align-items-center w-50 flex-grow-2 justify-content-center w-50"
         >
