--- a/artist.html
+++ b/artist.html
@@ -348,7 +348,7 @@
                   <h1>Popolari</h1>
                   <div id="content"></div>
 
-                  <div class="text-center text-lg-start mb-5">
+                  <div class="text-center text-lg-start mb-5 pb-5">
                     <button
                       onclick="showMore()"
                       id="show"
