--- a/album.html
+++ b/album.html
@@ -315,7 +315,7 @@
                 <!--  -->
                 <!-- TRACCE ALBUM -->
 
-                <section id="tracce-album">
+                <section class="mb-5 pb-5" id="tracce-album">
                   <!-- <div
                     class="tab traccia-tab d-none d-lg-block"
                     style="display: flex !important"
