--- a/artist.html
+++ b/artist.html
@@ -52,6 +52,28 @@
           </li>
         </ul>
       </nav>
+
+      <!--Player mobile-->
+      <div class="position-fixed start-0 end-0 px-2 m-2 z-2 player d-lg-none">
+        <div
+          class="bg-secondary text-white rounded d-flex align-items-center justify-content-between px-3 py-2 shadow"
+          style="height: 56px"
+        >
+          <div
+            class="text-truncate me-3 fw-semibold small"
+            style="max-width: 50%"
+          >
+            Supernatural Parody by The Hillywood Show
+          </div>
+
+          <!-- Icone player-->
+          <div class="d-flex align-items-center gap-3">
+            <i class="bi bi-speaker fs-5"></i>
+            <i class="bi bi-heart fs-5"></i>
+            <i class="bi bi-play-fill fs-4" id="playBtnMob"></i>
+          </div>
+        </div>
+      </div>
     </header>
     <main class="vh-100">
       <div class="container-fluid">
@@ -348,7 +370,10 @@
                   <h1>Popolari</h1>
                   <div id="content"></div>
 
-                  <div class="text-center text-lg-start mb-5 pb-5">
+                  <div
+                    class="text-center text-lg-start mb-5 pb-5"
+                    style="padding-bottom: 8em !important"
+                  >
                     <button
                       onclick="showMore()"
                       id="show"
