--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="d-flex align-items-center gap-3">
             <i class="bi bi-speaker fs-5"></i>
             <i class="bi bi-heart fs-5"></i>
-            <i class="bi bi-play-fill fs-4"></i>
+            <i class="bi bi-play-fill fs-4" id="playBtnMob"></i>
           </div>
         </div>
       </div>
