Fixed the button profile for all pages and create login page

--- a/album.html
+++ b/album.html
@@ -229,6 +229,31 @@
 
               <!--fine risultati ricerca-->
               <div id="container-img" style="margin: 0px">
+                <div class="position-absolute top-0 end-0 me-4">
+                  <div class="dropdown d-flex pt-3">
+                    <button
+                      class="btn dropdown-toggle text-white"
+                      type="button"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
+                    >
+                      Mario Rossi
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li>
+                        <a class="dropdown-item" href="#">Il tuo Account</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">Impostazioni</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item text-danger" href="./login.html"
+                          >Esci</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
                 <img
                   src="assets\imgs\album\immaginealbum.jpg"
                   alt="Immagine album"
