--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
             </div>
           </div>
           <!-- Container Centrale che in mobile è fullscreen -->
-          <div class="col-12 col-lg-6 bg-dark flex-fill">
-            <div class="d-flex justify-content-end">
+          <div class="col-12 col-lg-6 bg-dark flex-fill position-relative">
+            <div class="position-absolute top-0 end-0 me-4">
               <div class="dropdown d-flex pt-3">
                 <button
                   class="btn btn-outline-dark dropdown-toggle text-white"
@@ -174,7 +174,11 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Il tuo Account</a></li>
                   <li><a class="dropdown-item" href="#">Impostazioni</a></li>
-                  <li><a class="dropdown-item" href="#">Esci</a></li>
+                  <li>
+                    <a class="dropdown-item text-danger" href="./login.html"
+                      >Esci</a
+                    >
+                  </li>
                 </ul>
               </div>
             </div>
