--- a/artist.html
+++ b/artist.html
@@ -249,6 +249,7 @@
                   <button
                     class="btn dropdown-toggle text-white"
                     type="button"
+                    id="user"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
@@ -521,5 +522,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/script/artist.js"></script>
+    <script src="./assets/script/login.js"></script>
+    <script>
+      window.onload = nome;
+    </script>
   </body>
 </html>
