--- a/album.html
+++ b/album.html
@@ -234,6 +234,7 @@
                     <button
                       class="btn dropdown-toggle text-white"
                       type="button"
+                      id="user"
                       data-bs-toggle="dropdown"
                       aria-expanded="false"
                     >
@@ -557,5 +558,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/script/album.js"></script>
+    <script src="./assets/script/login.js"></script>
+    <script>
+      window.onload = nome;
+    </script>
   </body>
 </html>
