--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                 <button
                   class="btn btn-outline-dark dropdown-toggle text-white"
                   type="button"
+                  id="user"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
@@ -175,7 +176,10 @@
                   <li><a class="dropdown-item" href="#">Il tuo Account</a></li>
                   <li><a class="dropdown-item" href="#">Impostazioni</a></li>
                   <li>
-                    <a class="dropdown-item text-danger" href="./login.html"
+                    <a
+                      class="dropdown-item text-danger"
+                      onclick="deleteName()"
+                      href="./login.html"
                       >Esci</a
                     >
                   </li>
@@ -415,5 +419,9 @@
     ></script>
     <script src="./assets/script/index.js"></script>
     <script src="./assets/script/audio.js"></script>
+    <script src="./assets/script/login.js"></script>
+    <script>
+      window.onload = nome;
+    </script>
   </body>
 </html>
